# Athena

./: .env.example  .gitignore  ARCHITECTURE.md  MCP_USAGE_GUIDE.md  ORCHESTRATION_COMPARISON.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SLASH_COMMANDS.md  TOOL_MANAGEMENT.md  WEB_SEARCH_SETUP.md  WEB_TOOLS_GUIDE.md  config.yaml  config.yaml.example  pyproject.toml  test_docs_agent.py  test_error_recovery.py  test_insert_tool.py  test_mcp_commands.py  test_mcp_integration.py  test_mcp_server.py  test_question_routing.py  test_skills.py  test_streaming_command.py  test_thinking_command.py
athena/: __init__.py  cli.py  config_manager.py
athena/agent/: __init__.py  base_agent.py  main_agent.py  retry_tracker.py  specialized.py  sub_agent.py  thinking.py  types.py
athena/commands/: __init__.py  loader.py
athena/context/: __init__.py  compressor.py  manager.py
athena/errors/: __init__.py  classifier.py  recovery.py  strategies.py
athena/hooks/: __init__.py  manager.py
athena/llm/: __init__.py  client.py  fallback_parser.py  thinking_injector.py
athena/mcp/: __init__.py  client.py  http_client.py  manager.py  schema_converter.py  stdio_client.py  tool_wrapper.py
athena/models/: __init__.py  config.py  job.py  message.py  permission.py  tool.py
athena/queue/: __init__.py  sqlite_queue.py
athena/session/: __init__.py  manager.py
athena/skills/: __init__.py  loader.py  skill.py
athena/tools/: __init__.py  base.py  bash.py  file_ops.py  git.py  (+10 more)
docs/: AGENT_ARCHITECTURE.md  ASK_USER_QUESTION.md  HYBRID_STORAGE.md
tests/: test_imports.py
